<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/store_screen_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appPrimary">


    <TextView
        android:id="@+id/store_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:fontFamily="@font/lato_black"
        android:text="@string/product_name"
        android:textAlignment="center"
        android:textColor="@color/appBlack"
        android:textSize="@dimen/text_header"
        android:textStyle="bold" />


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_viewStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/store_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin"
        card_view:cardBackgroundColor="@color/appComplementary"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="16dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/storeRelativeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            tools:context=".ProductScreen">

            <ImageView
                android:id="@+id/store_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:background="@drawable/imageview_border"
                android:cropToPadding="true" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/store_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_viewStore"
        android:fadeScrollbars="false"
        android:cropToPadding="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/appBlack"
        android:scrollbars = "vertical"
        android:textSize="@dimen/text_body" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_alignTop="@id/store_lower_half"
        android:elevation="8dp"
        android:src="@drawable/myrect" />


    <LinearLayout
        android:id="@+id/store_lower_half"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:background="@color/appComplementary"
        android:elevation="7dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin">

        <TextView
            android:id="@+id/store_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:fontFamily="@font/lato_regular"
            android:paddingTop="24dp"
            android:text="@string/open_google_maps"
            android:textSize="@dimen/text_body" />


        <TextView
            android:id="@+id/store_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/read_barcode"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/opensans"
            android:paddingBottom="@dimen/margin"
            android:text="@string/store_rating"
            android:textSize="@dimen/text_body"
            android:textStyle="italic" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/appComplementary"
        android:elevation="7dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/read_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/read_barcode" />
    </LinearLayout>


</RelativeLayout>
