<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/product_price_list">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/product_name"
                android:layout_alignBottom="@+id/product_name" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:fontFamily="@font/opensans"
                android:text="@string/product_name"
                android:textColor="@color/colorTT_OnPrimary"
                android:textSize="@dimen/text_header"
                android:textStyle="bold" />


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_viewProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin"
                card_view:cardBackgroundColor="#f4f3e8"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp">

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/productRelativeView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical"
                    tools:context=".ProductScreen">

                    <ImageView
                        android:id="@+id/product_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginTop="@dimen/margin" />


                    <TextView
                        android:id="@+id/product_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/product_image"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:fontFamily="@font/opensans"
                        android:text="@string/product_description"
                        android:textColor="@color/colorTT_OnBackground"
                        android:textSize="@dimen/text_body" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/product_price_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_above="@+id/buttons"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <Button
            android:id="@+id/read_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/read_barcode" />


    </LinearLayout>

</RelativeLayout>